[project]
name = "multi-agent-charging-problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pulp>=3.3.0",
    "pybamm>=26.3.1",
    "pymoo>=0.6.1.6",
    "pyyaml>=6.0.3",
]
